<resources>
    <string name="app_name">Score</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_game">Game</string>
    <string name="hit">Hit</string>
    <string name="start">Start</string>
    <string name="total">Total:</string>
    <string name="overs">Overs:</string>
    <string name="start_second_innings">Start Second Innings</string>
    <string name="target">Target:</string>
    <string name="play">Play</string>
    <string-array name="one">
        <item>A fine paddle scoop first ball. Full around middle and off, he gets underneath it and lofts the ball over short fine leg. Should have been more than one.</item>
        <item>A slower delivery outside off, chopped towards backward point.</item>
        <item>Another mis-timed scoop, toe-ended away to deep square leg.</item>
        <item>Another slower ball, on the pads, worked away to deep square leg for one.</item>
        <item>A low full toss outside off, bunted to cover for one.</item>
        <item>An offcutter on the pads, nudged down to fine leg for a run.</item>
        <item>A slower delivery again, straight, worked to midwicket.</item>
        <item>Gives himself plenty of room, slower ball down leg, gets the inside half of the bat on an attempted drive, one to mid-on.</item>
        <item>Whipped away over square leg, wanting to use the pace and flick through square leg but a leading edge to deep midwicket.</item>
        <item>Good length, quick outside off, carved off the open face to third man for one.</item>
        <item>Strays on the pads, worked to deep square leg for one.</item>
        <item>Flat delivery around off, swept to deep midwicket for one.</item>
        <item>Leg bye, pushed through, quick around leg, misses a nudge, off the pad towards point.</item>
        <item>A yorker, low full toss actually, whipped to deep midwicket.</item>
        <item>Tossed up outside off, backs away and hammers it along the floor to long-off.</item>
        <item>Overpitched on middle stump, brings down and angled bat and hammers this along the turf to long-on.</item>
    </string-array>
    <string-array name="two">
        <item>Digs that one in too, short around off and middle, bunted away through midwicket for a couple.</item>
        <item>Too straight, just worked with the wrists behind square. Very intentional from Batsman, not over-hitting, relying on timing.</item>
        <item>Short one on leg stump, follows him as he backs into the leg side. Swings cleanly and gets this pull out to deep midwicket where Batsman tumbles to his left and takes some time trying to locate the ball after getting up.</item>
        <item>Badly timed away past midwicket for a couple more. Off the inside half.</item>
        <item>A chip away to deep midwicket for a couple, in the gap nicely.</item>
        <item>Flat and wide outside off, sliced away past point for a couple.</item>
        <item>Hits another gap in the field. Good length outside off, he lofts the ball intentionally over cover this time for a couple.</item>
        <item>Short around off, pulled past midwicket for two more. Square leg runs to his left.</item>
        <item>Into the gap for another couple. So easy. On the pads and flicked away past midwicket.</item>
        <item>Great running, full on leg, nudged with soft hands to deep midwicket. He gets two.</item>
        <item>Two more, fine batting from Batsman, just nudged into the gap behind square for a couple more.</item>
        <item>Slow and wide outside off, Batsman gets across and drags a sweep to deep midwicket for a couple.</item>
        <item>88 kph, pushed wider outside off, driven past cover for a couple.</item>
        <item>Two more. Wow. Just soooo easy. Shortish around off, nudged away towards midwicket with soft hands.</item>
        <item>Chips down the pitch and flicks the ball into the gap at square leg for a couple more. Lots of twos, large dimensions.</item>
        <item>Ooh, over point. In the air but falls in no-man\'s land. It was full outside off, Batsman clears his front leg, looking to go straight but the ball skews off the outside half, sliced. Gets enough bat to clear the infield.</item>
    </string-array>
    <string-array name="three">
        <item>Good length at leg stump. Waits for it to come on and flicks late to long leg\'s left. Fielder runs a long way and slides awkwardly to keep it in. Throws hurriedly from the floor and that allows a third.</item>
        <item>Sparkling stroke! Stands tall and punches this into the gap between cover and point. Picked the length early as he transferred his weight back to play the stroke. Fielder pulls it back in cleanly.</item>
        <item>Back of a length outside off, stands tall and slices it between between point and cover. They come back for the third.</item>
        <item>Wrong\'un, floated wide of off stump, and it provokes a rare error. Batsman reaches out to push into the covers, doesn\'t pick it, and gets a thick outside edge that runs away wide of slip.</item>
        <item>Once again goes back into the crease and works this wrong\'un down to deep fine leg where Fielder slides and pulls it back in.</item>
        <item>Uses the pace of the bowler to play this delicate dab past short third man, Fielder with the mopping up. Had to run back from slip, putting his wonky hamstrings to work.</item>
        <item>Punched into the gap at deep cover. The initial call for two, but three it will be as Fielder takes a while to recover from the slide.</item>
    </string-array>
    <string-array name="four">
        <item>A bit short this time, Batsman picks the length and says thanks mate. Slaps a pull over midwicket with so much ease. Disdain in that shot.</item>
        <item>Yep, yep, yep. That\'s quality. Full, overpitched. And Batsman off-drives that with the full face of the bat, the timing is sublime, the placement is exquisite. All requisites for boundary-scoring.</item>
        <item>Width and slashed. Can\'t bowl there. Too wide and Batsman lets his hands through the line, carving a cut from down to up so that it goes over the infield, past backward point.</item>
        <item>Well played, found the gap and executed beautifully. A short and wide offcutter outside off, slapped away through cover, just to the fielder\'s left.</item>
        <item>Into the gap and four. Good length on middle and leg, not fantastic timing but placed it well, a heave into the gap at midwicket, one bounce for four.</item>
        <item>That would have been wide, but Batsman gives it all he has. A legcutter outside off, Batsman gets a thick outside edge which flies down to third man for four.</item>
        <item>A full toss on middle and leg, looking for the yorker, flicked away past square leg for four. Superb timing.</item>
        <item>Comes charging again, full delivery outside off, Batsman runs down and looks to go over the off side, a better option but the ball skews off the outside half towards third man again, to Bowler\'s left. He can\'t quite get across.</item>
        <item>Flat and quick on middle and leg, Batsman backs away and slaps a pull down the ground, past Fielder at mid-on, who races back and makes it, but can\'t quite get to the ball.</item>
        <item>Lovely shot. It\'s short on middle, Batsman rocks back, picks the length and pummels a pull through midwicket, finds the gap with ease.</item>
        <item>Whatever you bowl, you have to bowl it well. That\'s a filthy slower ball, short down leg, and Batsman helps himself to four with a help-along to fine leg.</item>
        <item>That\'s sensational batting. A low full toss outside off, Batsman picks his area again and just times the heck out of the ball. Chipped almost, but lands just inside the boundary. A little higher on the bat and that would be six.</item>
        <item>Nicely played. Charges down, picks the slower ball and slices the ball intentionally over cover. That\'s a very clever stroke.</item>
        <item>That\'s not a good ball and put away. Digs this in short outside off, swatted over point for four. Lands just inside the boundary.</item>
        <item>Comes down to the pitch, gets there and drills a drive wide of cover. Good timing.</item>
        <item>Gets enough, a slower short delivery. Batsman keeps his balance, his head is still and then slaps the ball over mid-on.</item>
    </string-array>
</resources>