<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.csecu.amrit.score.activities.GameActivity"
    tools:showIn="@layout/activity_game">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/total"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_target"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/target"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tv_overs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/overs"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/colorBlack"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/start"
            android:textColor="@color/colorWhite"
            android:textSize="60sp" />

        <Button
            android:id="@+id/bt_hit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onHit"
            android:text="@string/hit" />

        <Button
            android:id="@+id/bt_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSecond"
            android:text="@string/start_second_innings"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tv_commentary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/colorWhite"
            android:padding="10dp"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
